@@ -5409,6 +5409,15 @@ decl_stmt|;
 try|try
 block|{
 specifier|final
+name|Object
+name|val
+init|=
+name|entry
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+specifier|final
 name|Method
 name|method
 init|=
@@ -5419,16 +5428,12 @@ argument_list|,
 name|setterName
 argument_list|,
 name|key
-argument_list|)
-decl_stmt|;
-specifier|final
-name|Object
+argument_list|,
 name|val
-init|=
-name|entry
 operator|.
-name|getValue
+name|getClass
 argument_list|()
+argument_list|)
 decl_stmt|;
 name|method
 operator|.
@@ -5486,6 +5491,39 @@ name|setterName
 parameter_list|,
 name|String
 name|key
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|paramClazz
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|clazz
+operator|.
+name|getMethod
+argument_list|(
+name|setterName
+argument_list|,
+operator|new
+name|Class
+argument_list|<
+name|?
+argument_list|>
+index|[]
+block|{
+name|paramClazz
+block|}
+block|)
+empty_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchMethodException
+name|e
 parameter_list|)
 block|{
 for|for
@@ -5526,6 +5564,7 @@ name|m
 return|;
 block|}
 block|}
+block|}
 throw|throw
 operator|new
 name|RuntimeException
@@ -5543,7 +5582,11 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
+end_class
+begin_comment
 comment|/**    * Given the integer purpose of a request generates a readable value corresponding    * the request purposes (there can be more than one on a single request). If    * there is a purpose parameter present that's not known this method will    * return {@value #UNKNOWN_VALUE}    * @param reqPurpose Numeric request purpose    * @return a comma separated list of purposes or {@value #UNKNOWN_VALUE}    */
+end_comment
+begin_function
 DECL|method|getRequestPurpose
 specifier|public
 specifier|static
@@ -5651,6 +5694,6 @@ return|return
 name|UNKNOWN_VALUE
 return|;
 block|}
-block|}
-end_class
+end_function
+unit|}
 end_unit
