@@ -3375,6 +3375,183 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|class|InvokeSettersTestClass
+specifier|private
+class|class
+name|InvokeSettersTestClass
+block|{
+DECL|field|aFloat
+specifier|private
+name|float
+name|aFloat
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextFloat
+argument_list|()
+decl_stmt|;
+DECL|method|getAFloat
+specifier|public
+name|float
+name|getAFloat
+parameter_list|()
+block|{
+return|return
+name|aFloat
+return|;
+block|}
+DECL|method|setAFloat
+specifier|public
+name|void
+name|setAFloat
+parameter_list|(
+name|float
+name|aFloat
+parameter_list|)
+block|{
+name|this
+operator|.
+name|aFloat
+operator|=
+name|aFloat
+expr_stmt|;
+block|}
+DECL|method|setAFloat
+specifier|public
+name|void
+name|setAFloat
+parameter_list|(
+name|String
+name|aFloat
+parameter_list|)
+block|{
+name|this
+operator|.
+name|aFloat
+operator|=
+name|Float
+operator|.
+name|parseFloat
+argument_list|(
+name|aFloat
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testInvokeSetters
+specifier|public
+name|void
+name|testInvokeSetters
+parameter_list|()
+block|{
+specifier|final
+name|Float
+name|theFloat
+init|=
+operator|new
+name|Float
+argument_list|(
+name|random
+argument_list|()
+operator|.
+name|nextFloat
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|implTestInvokeSetters
+argument_list|(
+name|theFloat
+argument_list|,
+name|theFloat
+argument_list|)
+expr_stmt|;
+name|implTestInvokeSetters
+argument_list|(
+name|theFloat
+argument_list|,
+name|theFloat
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|implTestInvokeSetters
+specifier|public
+name|void
+name|implTestInvokeSetters
+parameter_list|(
+specifier|final
+name|Float
+name|theFloat
+parameter_list|,
+specifier|final
+name|Object
+name|theFloatObject
+parameter_list|)
+block|{
+specifier|final
+name|InvokeSettersTestClass
+name|bean
+init|=
+operator|new
+name|InvokeSettersTestClass
+argument_list|()
+decl_stmt|;
+specifier|final
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|initArgs
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|initArgs
+operator|.
+name|put
+argument_list|(
+literal|"aFloat"
+argument_list|,
+name|theFloatObject
+argument_list|)
+expr_stmt|;
+name|SolrPluginUtils
+operator|.
+name|invokeSetters
+argument_list|(
+name|bean
+argument_list|,
+name|initArgs
+operator|.
+name|entrySet
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bean
+operator|.
+name|getAFloat
+argument_list|()
+argument_list|,
+name|theFloat
+operator|.
+name|floatValue
+argument_list|()
+argument_list|,
+literal|0.0
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** macro */
 DECL|method|pe
 specifier|public
